Fix horizontal scrolling on home page (#22)

--- a/app/assets/stylesheets/countdown/index.scss
+++ b/app/assets/stylesheets/countdown/index.scss
@@ -17,7 +17,7 @@
     color: $theme;
   }
 
-  @media (max-device-width: 550px) {
+  @media (max-width: 550px) {
     .prompt, .command {
       display: none;
     }
